# NeHe-SDL_GPU

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Package.swift  README.md  build.rs
cmake/modules/: AddLesson.cmake
data/shaders/: lesson11.frg.spv  lesson11.metallib  lesson11.vtx.dxb  lesson11.vtx.spv  lesson12.metallib  lesson12.vtx.dxb  lesson12.vtx.spv  lesson13.frg.spv  lesson13.metallib  lesson13.pxl.dxb  lesson13.vtx.dxb  lesson13.vtx.spv  lesson16_lit_exp.frg.spv  lesson16_lit_exp.metallib  lesson16_lit_exp.pxl.dxb  lesson16_lit_exp2.frg.spv  lesson16_lit_exp2.metallib  lesson16_lit_exp2.pxl.dxb  lesson16_lit_exp2.vtx.spv  lesson16_lit_lin.frg.spv  lesson16_lit_lin.metallib  lesson16_lit_lin.pxl.dxb  lesson16_lit_lin.vtx.dxb  lesson16_unlit_exp.frg.spv  lesson16_unlit_exp.metallib  lesson16_unlit_exp.pxl.dxb  lesson16_unlit_exp.vtx.spv  lesson16_unlit_exp2.frg.spv  lesson16_unlit_exp2.metallib  lesson16_unlit_exp2.pxl.dxb  lesson16_unlit_lin.frg.spv  lesson16_unlit_lin.metallib  lesson16_unlit_lin.pxl.dxb  lesson16_unlit_lin.vtx.dxb  lesson17.metallib  lesson17.vtx.dxb  lesson17.vtx.spv  lesson19.metallib  lesson2.frg.spv  lesson2.metallib  (+31 more)
scripts/: compile_shaders.py  lesson_template.py
scripts/shaders/: Makefile.darwin  Makefile.unix  NMakefile.windows  build.ninja
scripts/templates/: c.toml  default.c.txt  default.rust.txt  default.swift.txt  lesson1.c.txt  lesson1.rust.txt  lesson1.swift.txt  lesson6.c.txt  lesson6.rust.txt  lesson6.swift.txt  lesson7.c.txt  lesson7.rust.txt  lesson7.swift.txt  rust.toml  swift.toml
(+106 files in other folders)
